# GitBotAI-

./: .replit  Dockerfile  LICENSE  Non  README.md  app.py  documentation.py  index.html  pricing.html  pyproject.toml  requirements.txt  scripts.js  setup.py  shared_dependencies.md  style.css  styles.css  sweep.yaml  techstack.md  techstack.yml
GitBotAI/: Dockerfile  README.md  app.py  authentication.py  bot.py  code_generation.py  deployment.py  documentation.py  nlu.py  repository_management.py  requirements.txt  support.py  sweep.yaml  utils.py  version_control.py
GitBotAI/models/: authentication_model.py  nlu_model.py
GitBotAI/templates/: code_templates.py  deployment_templates.py  repository_templates.py
GitBotAI/tests/: test_authentication.py  test_code_generation.py  test_deployment.py  test_documentation.py  test_nlu.py  test_repository_management.py  test_support.py  test_version_control.py
