[tool.poetry]
name = "repl_nix_GitBotAI-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
nltk = "^3.8.1"
requests = "^2.31.0"
scikit-learn = "^1.3.0"
docker = "^6.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
